# pyspark-audio-features

./: .env.example  .gitignore  README.md  architecture.drawio  extract_features.py  model.ipynb  music_dashboard.py  pipeline.py  pipeline2.py  pipeline_rf.py  pyproject.toml  truc.ipynb
archive/: pipeline.py  pipeline2_rf.py
assets/: raw_30s_filtered.tsv
assets_scripts/: filter_genres.py  top_genres.py  view_repartition.py
data/: columns_name.json  program.json
data/features/parquet_compact/: .part-00000-efa93422-d9e0-42d6-9a04-aa8d873d80c2-c000.snappy.parquet.crc
data/features/training_dataset/: .part-00000-d2e85c1e-3ec5-4163-8388-256ef1a6dcb1-c000.snappy.parquet.crc  .part-00001-d2e85c1e-3ec5-4163-8388-256ef1a6dcb1-c000.snappy.parquet.crc  .part-00002-d2e85c1e-3ec5-4163-8388-256ef1a6dcb1-c000.snappy.parquet.crc  .part-00003-d2e85c1e-3ec5-4163-8388-256ef1a6dcb1-c000.snappy.parquet.crc  .part-00004-d2e85c1e-3ec5-4163-8388-256ef1a6dcb1-c000.snappy.parquet.crc  .part-00005-d2e85c1e-3ec5-4163-8388-256ef1a6dcb1-c000.snappy.parquet.crc  .part-00006-d2e85c1e-3ec5-4163-8388-256ef1a6dcb1-c000.snappy.parquet.crc  .part-00007-d2e85c1e-3ec5-4163-8388-256ef1a6dcb1-c000.snappy.parquet.crc  .part-00008-d2e85c1e-3ec5-4163-8388-256ef1a6dcb1-c000.snappy.parquet.crc  (+15 more)
gcp/: build_dataset.py  extract_features.py  install_deps.sh  upload.py
gcp/convert/: Dockerfile  convert.py
runpod/: extract_features.py
scripts/: convert.py  download.py
utils/: Readme.md  enrich.py  extract_all.py  extract_all_concise.py  features.py
(+266 files in other folders)
