[project]
name = "projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.1",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "yt-dlp>=2026.3.17",
]
