[project]
name = "projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair<5",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.10.1",
    "librosa>=0.11.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "streamlit>=1.19.0",
    "tqdm>=4.67.1",
    "yt-dlp>=2026.3.17",
]
